# APRSlib

./: README.md  sdkconfig
components/APRS/: CMakeLists.txt
components/APRS/aprs/: APRS.c  APRS.h
components/APRS/ax25_fx25/: ax25.h
components/APRS/ax25_fx25/lwfec/: rs.h
components/APRS/kiss/: KISS.c
components/APRS/modem/: fir_filter.c  fir_filter.h  modem.h  queue.c  queue.h
components/APRSlib/: APRSlib.h  APRSlib_version.h  CMakeLists.txt
components/APRSlib/aprs/: APRS.c  aprs.c  aprs.h
components/APRSlib/ax25_fx25/: CRC-CCIT.h  ax25.c  ax25.h  crc-ccit.c  fx25.c  fx25.h
components/APRSlib/ax25_fx25/lwfec/: gf.c  rs.c  rs.h
components/APRSlib/kiss/: KISS.c  KISS.h  kiss.c
components/APRSlib/modem/: afsk.c  afsk.h  fir_filter.c  modem.c  modem.h  queue.c
components/APRSlib_port/: APRSlib_port_version.h
components/APRSlib_port/esp32_port/: esp32_port.c  esp32_port.h
components/port/: CMakeLists.txt  port.h
components/port/esp32_port/: esp32_port.c  esp32_port.h
main/: CMakeLists.txt  idf_component.yml  main.c  test.c
